--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -6,10 +6,11 @@ on:
 
 jobs:
   deploy:
-    runs-on:ubuntu-latest
+    runs-on: ubuntu-latest
+
     steps:
-      -uses:action/checkout@main
-      -uses:jakejarvis/s3-sync-action@main
+      -uses: action/checkout@V2
+      -uses: jakejarvis/s3-sync-action@V2
        with:
          args:--acl public-read --follow-symlinks --delete --exclude '.git*/*'
        env:
