--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -8,7 +8,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: action/checkout@main
+    - uses: actions/checkout@main
     - uses: jakejarvis/s3-sync-action@main
       with:
         args: --acl public-read --follow-symlinks --delete
