--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -10,10 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@main
       with:
-        args: --acl public-read --follow-symlinks --delete
+        args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
       env:
          aws-s3-bucket:${{secrets.AWS_S3_BUCKET}}
          aws-access-key-id:${{secrets.AWS_ACCESS_KEY_ID}}
          aws-secret-access-key:${{secrets.AWS_SECRET_ACCESS_KEY}}
 
-    -run: aws s3 sync . s3://tercad.pt --exclude '.git*/*'
+      run: aws s3 sync . s3://tercad.pt 
