--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -9,13 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
+    - uses: jakejarvis/s3-sync-action@v2
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
       env:
          aws-s3-bucket:${{ secrets.AWS_S3_BUCKET }}
          aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: Copy files to the s3 website content bucket
-        run:
-          aws s3 sync . s3://${{ secrets.AWS_S3_BUCKET }}
