--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -13,6 +13,6 @@ jobs:
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
       env:
-         aws-s3-bucket:${{ secrets.AWS_S3_BUCKET }}
-         aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
-         aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         aws_s3_bucket:${{ secrets.AWS_S3_BUCKET }}
+         aws_access_key_id:${{ secrets.AWS_ACCESS_KEY_ID }}
+         aws_secret_access_key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
