--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -13,6 +13,6 @@ jobs:
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
       env:
-         aws_s3_bucket:${{ secrets.AWS_S3_BUCKET }}
-         aws_access_key_id:${{ secrets.AWS_ACCESS_KEY_ID }}
-         aws_secret_access_key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
+         AWS_S3_BUCKET:${{ secrets.AWS_S3_BUCKET }}
+         AWS_ACCESS_KEY_ID:${{ secrets.AWS_ACCESS_KEY_ID }}
+         AWS_SECRET_ACCESS_KEY:${{ secrets.AWS_SECRET_ACCESS_KEY }}
