--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -22,4 +22,4 @@ jobs:
          AWS_REGION: 'us-east-1' 
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync . ${{ secrets.AWS_S3_BUCKET }} --delete --exclude '.git*/*'
+      run: aws s3 sync . ${{ secrets.AWS_S3_BUCKET }} --exclude '.git*/*'
