--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -14,12 +14,13 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        args: --acl public-read --follow-symlinks
+        args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
       env:
          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          AWS_REGION: ${{ secrets.AWS_REGION }}
+         AWS-REGION: 'us-east-1'
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync . ${{ secrets.AWS_S3_BUCKET }} --exclude '.git*/*'
+      run: aws s3 sync . ${{ secrets.AWS_S3_BUCKET }}
