--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -18,6 +18,7 @@ jobs:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          AWS_REGION: ${{ secrets.AWS_REGION }}
+         aws-region: us-east-1
 
     - name: Deploy static site to S3 bucket
       run: aws s3 sync . ${{ secrets.AWS_S3_BUCKET }} --delete --exclude '.git*/*'
