--- a/.github/workflows/DeployToAWSS3.yml
+++ b/.github/workflows/DeployToAWSS3.yml
@@ -15,9 +15,10 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-region: us-east-1
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Deploy static site to S3 bucket
       run: aws s3 sync . s3://${{ secrets.AWS_S3_BUCKET }} --delete --exclude '.git*/*'
